--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^14.6.2
   font_awesome_flutter: ^10.8.0
+  pinput: ^5.0.0
 
 dev_dependencies:
   flutter_test:
