--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   go_router: ^14.6.2
   font_awesome_flutter: ^10.8.0
   pinput: ^5.0.0
+  introduction_screen: ^3.1.14
 
 dev_dependencies:
   flutter_test:
