--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   pinput: ^5.0.0
   introduction_screen: ^3.1.14
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
