--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   pinput: ^5.0.0
   introduction_screen: ^3.1.14
   dio: ^5.8.0+1
+  dartz: ^0.10.1
+  flutter_bloc: ^9.0.0
 
 dev_dependencies:
   flutter_test:
