--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   dio: ^5.8.0+1
   dartz: ^0.10.1
   flutter_bloc: ^9.0.0
+  get_it: ^8.0.3
+  modal_progress_hud_nsn: ^0.5.1
+  top_snackbar_flutter: ^3.2.0
 
 dev_dependencies:
   flutter_test:
