--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   get_it: ^8.0.3
   modal_progress_hud_nsn: ^0.5.1
   top_snackbar_flutter: ^3.2.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
