--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   modal_progress_hud_nsn: ^0.5.1
   top_snackbar_flutter: ^3.2.0
   image_picker: ^1.1.2
+  google_maps_flutter: ^2.10.1
 
 dev_dependencies:
   flutter_test:
