add add apartment cubit with photos and trigger it

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   top_snackbar_flutter: ^3.2.0
   image_picker: ^1.1.2
   google_maps_flutter: ^2.10.1
+  location: ^7.0.1
+  geocoding: ^4.0.0
 
 dev_dependencies:
   flutter_test:
